--- a/index.html
+++ b/index.html
@@ -4,30 +4,22 @@
     content="HTML Tidy for HTML5 (experimental) for Windows https://github.com/w3c/tidy-html5/tree/c63cc39" />
     <meta charset="utf-8" />
     <title>YouTube video page</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
       <div class="navbar">
-	  <span class="menu-button"></span>
-	  <img class="logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" />
-	  <input class="search-input" placeholder="Search">
-		<button class="search-button">
-			Search
-		</button>
-		<span class="upload-button"></span>
-		<button class="signin-button">
-			Sign In
-		</button>
-	  </div>
-	  <div class="content">
-		<div class="sidebar">
+      <img class="logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" /> 
+      <input class="search-input" placeholder="Search" /> 
+      <button class="search-button">Search</button> 
+      <button class="signin-button">Sign In</button></div>
+      <div class="content">
+        <div class="sidebar"></div>
+        <div class="video">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/C-gEQdGVXbk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
-		<div class="video">
-		</div>
-		<div class="description">
-		</div>
-	  </div>
+        <div class="description"></div>
+      </div>
     </div>
   </body>
 </html>
