--- a/index.html
+++ b/index.html
@@ -14,12 +14,39 @@
       <button class="search-button">Search</button> 
       <button class="signin-button">Sign In</button></div>
       <div class="content">
-        <div class="sidebar"></div>
         <div class="video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/C-gEQdGVXbk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/C-gEQdGVXbk" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+        </div>
+		
+        <div class="sidebar">
+          <ul class="related-videos">
+            <li class="related-video">
+              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <div class="rel-video-info">
+              <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
+              <span>Corey Schafer</span><br>
+              <span>83k</span></div>
+            </li>
+            <li class="related-video">
+              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <div class="rel-video-info">
+              <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
+              <span>Corey Schafer</span><br>
+              <span>83k</span></div>
+            </li>
+            <li class="related-video">
+              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <div class="rel-video-info">
+              <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
+              <span>Corey Schafer</span><br>
+              <span>83k</span></div>
+            </li>
+          </ul>
+        </div>
         <div class="description"></div>
       </div>
+	  
     </div>
   </body>
 </html>
