Video description implemented
Added video description, and fixed page structure and alignment

--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
 			</div>
 			</div>
 			</div>
+			<div class="description">
+			<span>Published on Dec 20, 2020</span>
+			<p>
+			This video is sponsored by Skillshare. Be one of the first 500 people to sign up with this link and get 2 free months of Skillshare Premium:
+https://skl.sh/coreyschafer
+In this Python Programming video, we will be going over 10 tips and tricks for writing Pythonic code.
+			</p>
+			</div>
         </div>
-		
-        <div class="sidebar">
+      </div>
+	  <div class="sidebar">
           <ul class="related-videos">
             <li class="related-video">
               <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
@@ -63,8 +71,6 @@
             </li>
           </ul>
         </div>
-      </div>
-	  
     </div>
   </body>
 </html>
