Added boxes to content and reinserted navbar icons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <div class="wrapper">
       <div class="navbar">
+	  <span class="menu-button"></span>
       <img class="logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" /> 
       <input class="search-input" placeholder="Search" /> 
       <button class="search-button">Search</button> 
+	  <span class="upload-button"></span>
       <button class="signin-button">Sign In</button></div>
       <div class="content">
         <div class="video-container">
