Added images locally and changed the links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
       <div class="navbar">
 	  <span class="menu-button"></span>
-      <img class="logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" /> 
+      <img class="logo" src="./img/logo.png" /> 
       <input class="search-input" placeholder="Search" /> 
       <button class="search-button">Search</button> 
 	  <span class="upload-button"></span>
@@ -49,21 +49,21 @@ In this Python Programming video, we will be going over 10 tips and tricks for w
 	  <div class="sidebar">
           <ul class="related-videos">
             <li class="related-video">
-              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <img src="./img/rel_video.jpg" />
               <div class="rel-video-info">
               <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
               <span>Corey Schafer</span><br>
               <span>83k</span></div>
             </li>
             <li class="related-video">
-              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <img src="./img/rel_video.jpg" />
               <div class="rel-video-info">
               <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
               <span>Corey Schafer</span><br>
               <span>83k</span></div>
             </li>
             <li class="related-video">
-              <img src="https://i.ytimg.com/vi/jTYiNjvnHZY/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&amp;rs=AOn4CLAGFlhKRxwiE1gbyI33shbRXiGPwg" />
+              <img src="./img/rel_video.jpg" />
               <div class="rel-video-info">
               <h4>Python Tutorial: Iterators and Iterables - What Are They</h4>
               <span>Corey Schafer</span><br>
