Aligned icons to the right, and added an icon to search bar

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <body>
     <div class="wrapper">
       <div class="navbar">
-	  <span class="menu-button"></span>
-      <img class="logo" src="./img/logo.png" /> 
-      <input class="search-input" placeholder="Search" /> 
-      <button class="search-button">Search</button> 
-	  <span class="upload-button"></span>
-      <button class="signin-button">Sign In</button></div>
+		<span class="menu-button"></span>
+		<img class="logo" src="./img/logo.png" />
+		<div class="navbar-right">
+		  <input class="search-input" placeholder="Search" /> 
+		  <button class="search-button">
+			<span class="search-button-icon"></span>
+		  </button> 
+		  <span class="upload-button"></span>
+		  <button class="signin-button">Sign In</button>
+		</div>
+      </div>
       <div class="content">
         <div class="video-container">
 			<div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/C-gEQdGVXbk" frameborder="0"
