--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<span class="search-button-icon"></span>
 		  </button> 
 		  <span class="upload-button"></span>
+		  <span class="history-button"></span>
 		  <span class="help-button"></span>
 		  <button class="signin-button">Sign In</button>
 		</div>
