Added links to navbar icons

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <div class="wrapper">
       <div class="navbar">
 		<span class="menu-button"></span>
-		<img class="logo" src="./img/logo.png" />
+		<img class="logo" width="200" height="60" src="./img/logo.png" />
 		<div class="navbar-right">
 		  <input class="search-input" placeholder="Search" /> 
 		  <button class="search-button">
 			<span class="search-button-icon"></span>
 		  </button> 
-		  <span class="upload-button"></span>
-		  <span class="history-button"></span>
-		  <span class="help-button"></span>
+		  <a href="#"><span class="upload-button"></span></a>
+		  <a href="#"><span class="history-button"></span></a>
+		  <a href="#"><span class="help-button"></span></a>
 		  <button class="signin-button">Sign In</button>
 		</div>
       </div>
